--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                         <a href="#">William Seklo</a>
                       </p>
 
-                      <p class="author-title">Estate Agents</p>
+                      <p class="author-title">Tank Ideas Agents</p>
                     </div>
 
                   </div>
@@ -730,7 +730,7 @@
                         <a href="#">William Seklo</a>
                       </p>
 
-                      <p class="author-title">Estate Agents</p>
+                      <p class="author-title">Tank Ideas Agents</p>
                     </div>
 
                   </div>
@@ -848,7 +848,7 @@
                         <a href="#">William Seklo</a>
                       </p>
 
-                      <p class="author-title">Estate Agents</p>
+                      <p class="author-title">Tank Ideas Agents</p>
                     </div>
 
                   </div>
