--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.png" alt="Homeverse logo">
+            <img src="./assets/images/logo (1).png" alt="Homeverse logo">
           </a>
 
           <p class="section-text">
